Modernize Java code to use Java 16+ features
Main source changes:
- Use switch expressions instead of traditional switch (NormalizationService)
- Replace Collectors.toList() with .toList() (UtilitiesService)
- Replace Collections.emptyList() with List.of() (DeduplicationService)

Test source changes:
- Replace Collectors.toList() with .toList() across test files
- Remove unused Collectors imports
- Wrap .toList() results with ArrayList where mutability needed

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>