@@ -8,7 +8,6 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
@@ -62,7 +61,7 @@ public class UtilitiesService {
 
 		public static List<RomanNumeral> getReverseSortedValues() {
 			return Arrays.stream(values()).sorted(Comparator.comparing((RomanNumeral e) -> e.value).reversed())
-					.collect(Collectors.toList());
+					.toList();
 		}
 	}
 
